# machineboss

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: .gitignore  Makefile  plot_benchmarks.R  report.tex  run_benchmarks.py
constraints/: dnapsw.json  protpsw.json  translate.json  translator.json
data/: Celegans_codon.json  Ecoli_codon.json  Makefile  SwissProtComposition.json  codon-usage.txt  dna_celegans.json  dna_uniform.json  flank_introns.json  prot1.json  prot1sub.json
doc/: composition.html  expressions.html  json-format.html  json-output.html  machineboss.html
docs/: CNAME  _config.yml  bio-tutorial.md  composition.md  dna-storage.md  expressions.md  genewise.md  index.md  json-format.md  json-output.md  library-api.md  machineboss.md  presets.md  python.md  transducer-history.md  tutorial.md  webgpu.md  why-machine-boss.md
emcc/: pre.js
examples/: Makefile.code  Makefile.csv  Makefile.pfam  Makefile.prosite  PF00516.hmm  README.md  gene_hmm.json  gene_hmm_params.json  gp120.fa  trp-cage.fa
include/: machineboss.h
js/: dna2.js  iupacaa.js  iupacdna.js  makepsw.js  maketkf.js  noreps.js  paf2train.js  pint.js  pswint.js  restrict.js  simple_introns.js  stripnames.js  tolower.js  translate.js
machine/: bitstutter.json
node/: add-intron-placeholders.js  makeint.js  makepsw.js  pint.js  pswint.js  simple-introns.js  translate.js
params/: tkf91params.json  translate.json
perl/: hamming74.pl  json2circo  json2pdf  mixradar.pl
preset/: AfeI.json  add-intron-placeholders.json  base2acgt.json  bases.json  bitbase.json  bitcod.json  bittern.json  bittern2.json  (+29 more)
python/: pyproject.toml  requirements-dev.txt
python/codes/: dnastore.py  hamming74.py  mixradar.py
python/machineboss/: __init__.py  boss.py  eval.py  hmmer.py  io.py  machine.py  seqpair.py  weight.py
python/machineboss/jax/: API.md  __init__.py  backward.py  dp_1d_optimal.py  dp_1d_simple.py  dp_2d_optimal.py  dp_2d_simple.py  dp_aligned.py  dp_neural.py  forward.py  fused.py  fused_plan7.py  fwdback.py  jax_weight.py  kernel_dense.py  kernel_sparse.py  semiring.py  seq.py  types.py  utils.py  viterbi.py
python/machineboss/jax/test/: conftest.py  test_aligned.py  test_cross_validation.py  test_dp_1d.py  test_dp_1d_optimal.py  test_dp_2d_optimal.py  test_forward.py  test_fused.py  test_fused_plan7.py  test_fwdback.py  test_neural.py  test_pswm.py  test_sparse.py  test_viterbi.py
python/machineboss/test/: conftest.py  test_boss.py  test_hmmer.py  test_machine.py  test_weight.py
(+485 files in other folders)
