[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "machineboss"
version = "0.1.0"
description = "Python interface for Machine Boss weighted finite-state transducer toolkit"
readme = {file = "../README.md", content-type = "text/markdown"}
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    {name = "Ian Holmes", email = "ihh@berkeley.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/evoldoers/machineboss"
Repository = "https://github.com/evoldoers/machineboss"
Issues = "https://github.com/evoldoers/machineboss/issues"
Documentation = "https://github.com/evoldoers/machineboss#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["machineboss*"]
