[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "machineboss"
version = "0.1.0"
description = "Python interface for Machine Boss weighted finite-state transducer toolkit"
readme = {text = "Python/JAX interface for Machine Boss weighted finite-state transducer toolkit. See https://machineboss.org for documentation.", content-type = "text/plain"}
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    {name = "Ian Holmes", email = "ihh@berkeley.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/evoldoers/machineboss"
Repository = "https://github.com/evoldoers/machineboss"
Issues = "https://github.com/evoldoers/machineboss/issues"
Documentation = "https://machineboss.org"

[tool.setuptools.packages.find]
where = ["."]
include = ["machineboss*"]
